--- a/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/MainLayout.razor
+++ b/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/MainLayout.razor
@@ -1,13 +1,18 @@
 ﻿@inherits LayoutComponentBase
-
+@using Microsoft.AspNetCore.Http
+@using System.Security.Claims
+@using Microsoft.AspNetCore.Components.Authorization
+@inject AuthenticationStateProvider AuthenticationStateProvider
 <div class="page">
     <div class="sidebar">
         <NavMenu />
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        <div class="top-row px-4 auth">
+            <AuthorizeView>
+                <p>Hello, @context.User.Identity?.Name!</p>
+            </AuthorizeView>
         </div>
 
         <article class="content px-4">
