--- a/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/NavMenu.razor.css
+++ b/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/NavMenu.razor.css
@@ -17,11 +17,12 @@
 
 .top-row {
     height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: #117865;
 }
 
 .navbar-brand {
     font-size: 1.1rem;
+    background-color: #117865;
 }
 
 .bi {
