--- a/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/MainLayout.razor.css
+++ b/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/MainLayout.razor.css
@@ -6,10 +6,11 @@
 
 main {
     flex: 1;
+    width: 70%;
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-color: #117865
 }
 
 .top-row {
