--- a/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/NavMenu.razor
+++ b/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">b2c-portal</a>
+        <a class="navbar-brand" href="">B2C Partner Portal</a>
     </div>
 </div>
 
@@ -15,16 +15,9 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="MyDashboard">
+                <span class="bi bi-bar-chart-fill" aria-hidden="true"></span> My Dashboard
             </NavLink>
         </div>
     </nav>
 </div>
-
