--- a/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/_Imports.razor
+++ b/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
 @using b2c_portal
 @using b2c_portal.Components
