--- a/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/MainLayout.razor
+++ b/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/MainLayout.razor
@@ -1,4 +1,4 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 @using Microsoft.AspNetCore.Http
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Components.Authorization
