--- a/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Pages/Home.razor
+++ b/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Pages/Home.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
-
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome</h1>
 
-Welcome to your new app.
+Welcome to the WingIt Airlines Partner Portal.
