--- a/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/NavMenu.razor
+++ b/power-bi-embedded-reporting/application/b2c-portal/b2c-portal/Components/Layout/NavMenu.razor
@@ -15,8 +15,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="MyDashboard">
-                <span class="bi bi-bar-chart-fill" aria-hidden="true"></span> My Dashboard
+            <NavLink class="nav-link" href="OneDashboard">
+                <span class="bi bi-bar-chart-fill" aria-hidden="true"></span> OneDashboard
             </NavLink>
         </div>
     </nav>
